@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 07-05-2005 changed: cdda track filenames start at 1 instead of 0
   - 07-05-2005 fixed: wrong vorbisfile.dll in repository
   - 07-05-2005 changed: nav sounds respect volume settings
   - 07-05-2005 added: SF patch [1196982] make sidplayer respect volume at start - thanks to spiff
